swiping on mobile fixed

--- a/themes/inspera/assets/scss/style.scss
+++ b/themes/inspera/assets/scss/style.scss
@@ -1727,7 +1727,7 @@ $slider-nav-size: 50px;
         p, .title__group {
           text-align: right;
           @media (max-width: 767px) {
-            justify-content: center;
+            text-align: center;
           }
         }
 
@@ -1747,7 +1747,8 @@ $slider-nav-size: 50px;
         margin-bottom: 30px;
         color: var(--slider-text-color);
         @media(max-width: 767px) {
-          font-size: 24px;
+          @include font-h4;
+          text-align: center;
         }
       }
 
@@ -1755,7 +1756,8 @@ $slider-nav-size: 50px;
         margin-bottom: 30px;
         color: var(--slider-text-color);
         @media(max-width: 767px) {
-          font-size: 24px;
+          @include font-h4;
+          text-align: center;
         }
       }
 
